--- a/OpenEdXMobile/res/layout/panel_social_auth.xml
+++ b/OpenEdXMobile/res/layout/panel_social_auth.xml
@@ -1,34 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/panel_social_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/social_auth_bottom_margin"
         android:baselineAligned="false"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:gravity="center">
 
         <include
             android:id="@+id/google_button"
             layout="@layout/panel_google_button"
             android:layout_width="0dp"
             android:layout_height="@dimen/social_btn_height"
-            android:layout_weight="0.5" />
+            app:layout_constraintEnd_toStartOf="@+id/view_padding"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/view_padding"
             android:layout_width="6dp"
-            android:layout_height="1dp" />
+            android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <include
             android:id="@+id/facebook_button"
             layout="@layout/panel_facebook_button"
             android:layout_width="0dp"
             android:layout_height="@dimen/social_btn_height"
-            android:layout_weight="0.5" />
-    </LinearLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view_padding"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <include
+            android:id="@+id/microsoft_button"
+            layout="@layout/panel_microsoft_button"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/social_btn_height"
+            android:layout_marginTop="@dimen/social_button_top_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_padding"
+            app:layout_constraintWidth_percent=".50" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
