--- a/OpenEdXMobile/res/values-es/errors.xml
+++ b/OpenEdXMobile/res/values-es/errors.xml
@@ -4,7 +4,7 @@
   <string name="error_unknown">Error desconocido. Por favor, intente más tarde. </string>
   <!--Course related error messages-->
   <!--Error shown when a course's content is invalid or not in the format that we expect-->
-  <string name="course_error_content_invalid">No ha sido posible cargar el contenido del curso. Inténtelo de nuevo más tarde.</string>
+  <string name="course_error_content_invalid" tools:ignore="MissingTranslation">No ha sido posible cargar el contenido del curso. Inténtelo de nuevo más tarde.</string>
   <!--Title of alert shown when course enrollment request fails-->
   <string name="enrollment_error_title" tools:ignore="MissingTranslation">Error en la Inscripción</string>
   <!--Error message shown in alert when course enrollment request fails-->
