--- a/OpenEdXMobile/res/values-tr/errors.xml
+++ b/OpenEdXMobile/res/values-tr/errors.xml
@@ -4,7 +4,7 @@
   <string name="error_unknown">Bilinmeyen hata. Lütfen daha sonra tekrar deneyin.</string>
   <!--Course related error messages-->
   <!--Error shown when a course's content is invalid or not in the format that we expect-->
-  <string name="course_error_content_invalid">Ders içeriği yükleme başarısız. Lütfen daha sonra tekrar deneyin.</string>
+  <string name="course_error_content_invalid" tools:ignore="MissingTranslation">Ders içeriği yükleme başarısız. Lütfen daha sonra tekrar deneyin.</string>
   <!--Title of alert shown when course enrollment request fails-->
   <string name="enrollment_error_title" tools:ignore="MissingTranslation">Kayıtlanma Hatası</string>
   <!--Error message shown in alert when course enrollment request fails-->
