--- a/OpenEdXMobile/res/values-vi/errors.xml
+++ b/OpenEdXMobile/res/values-vi/errors.xml
@@ -4,7 +4,7 @@
   <string name="error_unknown">Lỗi chưa xác định. Vui lòng thử lại sau</string>
   <!--Course related error messages-->
   <!--Error shown when a course's content is invalid or not in the format that we expect-->
-  <string name="course_error_content_invalid">Không thể tải nội dung khóa học. Vui lòng thử lại sau.</string>
+  <string name="course_error_content_invalid" tools:ignore="MissingTranslation">Không thể tải nội dung khóa học. Vui lòng thử lại sau.</string>
   <!--Title of alert shown when course enrollment request fails-->
   <string name="enrollment_error_title" tools:ignore="MissingTranslation">Đã có lỗi khi tham gia khóa học</string>
   <!--Error message shown in alert when course enrollment request fails-->
