Disable 'MissingTranslation' and 'ImpliedQuantity' lint error checks
- LEARNER-7671
- Remove all 'MissingTranslation' and 'ImpliedQuantity' tags from the
source files while from translation files transifex will automatically
remove them when the source files will be pushed from master branch
after merging the PR.

--- a/OpenEdXMobile/res/values/errors.xml
+++ b/OpenEdXMobile/res/values/errors.xml
@@ -6,13 +6,13 @@
 
     <!-- Course related error messages -->
     <!-- Error shown when a course's content is invalid or not in the format that we expect -->
-    <string name="course_error_content_invalid" tools:ignore="MissingTranslation">Unable to load course content. Try again later.</string>
+    <string name="course_error_content_invalid">Unable to load course content. Try again later.</string>
     <!-- Title of alert shown when course enrollment request fails -->
-    <string name="enrollment_error_title" tools:ignore="MissingTranslation">Enrollment Error</string>
+    <string name="enrollment_error_title">Enrollment Error</string>
     <!-- Error message shown in alert when course enrollment request fails -->
-    <string name="enrollment_error_message" tools:ignore="MissingTranslation">We are unable to enroll you in this course at this time using the {platform_name} mobile application. Please try again on your web browser.</string>
+    <string name="enrollment_error_message">We are unable to enroll you in this course at this time using the {platform_name} mobile application. Please try again on your web browser.</string>
     <!-- Error message shown when a course section is not available on mobile -->
-    <string name="not_available_on_mobile" tools:ignore="MissingTranslation">Not available on Mobile</string>
+    <string name="not_available_on_mobile">Not available on Mobile</string>
 
     <!-- Network error messages -->
     <!-- Error shown when  user attempts an action but needs an internet connection -->
@@ -44,13 +44,13 @@
     <!-- Content of alert shown during login when user attempts login via Facebook without having linked their account -->
     <string name="error_account_not_linked_desc_fb">Make sure your Facebook account is associated with your {platform_name} account on {platform_destination}</string>
     <!-- Content of alert shown during login when user attempts login via Facebook without having linked their account -->
-    <string name="error_account_not_linked_desc_fb_2" tools:ignore="MissingTranslation">This Facebook account is not linked with any {platform_name} account. Please register.</string>
+    <string name="error_account_not_linked_desc_fb_2">This Facebook account is not linked with any {platform_name} account. Please register.</string>
     <!-- Title of alert shown during login when user attempts login via Google without having linked their account -->
-    <string name="error_account_not_linked_title_google" tools:ignore="MissingTranslation">Google account not associated with {platform_name} account</string>
+    <string name="error_account_not_linked_title_google">Google account not associated with {platform_name} account</string>
     <!-- Content of alert shown during login when user attempts login via Google without having linked their account -->
-    <string name="error_account_not_linked_desc_google" tools:ignore="MissingTranslation">Make sure your Google account is associated with your {platform_name} account on {platform_destination}</string>
+    <string name="error_account_not_linked_desc_google">Make sure your Google account is associated with your {platform_name} account on {platform_destination}</string>
     <!-- Content of alert shown during login when user attempts login via Google without having linked their account -->
-    <string name="error_account_not_linked_desc_google_2" tools:ignore="MissingTranslation">This Google account is not linked with any {platform_name} account. Please register.</string>
+    <string name="error_account_not_linked_desc_google_2">This Google account is not linked with any {platform_name} account. Please register.</string>
 
     <!-- Download error messages -->
     <!-- Label shown on video list item whose download failed -->
@@ -58,7 +58,7 @@
     <!-- Confirmation message shown when attempting to download a large quantity of video data -->
     <string name="file_size_exceeded">The size of the download exceeds the remaining device storage space.</string>
     <!-- Confirmation message shown when attempting to download a large quantity of video data -->
-    <string name="download_exceed_message" tools:ignore="MissingTranslation">The videos you’ve selected are larger than 1 GB.
+    <string name="download_exceed_message">The videos you’ve selected are larger than 1 GB.
         Do you want to download these videos?</string>
     
     <!-- Message shown when user attempts to download a video over cellular data,
@@ -76,7 +76,7 @@
     <!-- Toast notification for when the user presses the update action button from the Snackbar
          notifications while no supported app store or browser is installed on the device with which
          the app could be updated -->
-    <string name="app_version_upgrade_app_store_unavailable" tools:ignore="MissingTranslation">No supported app store found on device.</string>
+    <string name="app_version_upgrade_app_store_unavailable">No supported app store found on device.</string>
 
     <!-- Registration Error Messages -->
 
@@ -90,23 +90,23 @@
     <string name="error_max_length">%1$s cannot have more than %2$d characters.</string>
 
     <!-- Error message shown when a course hasn't started yet -->
-    <string name="course_not_started" tools:ignore="MissingTranslation">This course hasn’t started yet.</string>
+    <string name="course_not_started">This course hasn’t started yet.</string>
 
     <!-- Error message shown when a user's access has expired for a course -->
-    <string name="course_access_expired" tools:ignore="MissingTranslation">Your access to this course has expired.</string>
+    <string name="course_access_expired">Your access to this course has expired.</string>
 
     <!-- Error message shown when a user can't perform an action on e.g. add a post/response/comment in forums -->
-    <string name="action_not_completed" tools:ignore="MissingTranslation">Your action could not be completed.</string>
+    <string name="action_not_completed">Your action could not be completed.</string>
 
     <!-- Error dialog message shown when the user try to log in in app with un-supported version  -->
-    <string name="app_version_unsupported_login_msg" tools:ignore="MissingTranslation">Your version of the app is no longer supported. Update to the latest version to log in.</string>
+    <string name="app_version_unsupported_login_msg">Your version of the app is no longer supported. Update to the latest version to log in.</string>
 
     <!-- Error dialog message shown when the user try to register in app with un-supported version -->
-    <string name="app_version_unsupported_register_msg" tools:ignore="MissingTranslation">Your version of the app is no longer supported. Update to the latest version to register.</string>
+    <string name="app_version_unsupported_register_msg">Your version of the app is no longer supported. Update to the latest version to register.</string>
 
     <!-- Permission Error Messages -->
 
     <!-- Error message shown when a permission is not granted -->
-    <string name="permission_not_granted" tools:ignore="MissingTranslation">Permission not granted</string>
+    <string name="permission_not_granted">Permission not granted</string>
 
 </resources>
