--- a/OpenEdXMobile/res/values/colors.xml
+++ b/OpenEdXMobile/res/values/colors.xml
@@ -77,6 +77,8 @@
     <color name="edx_error_back">#FEECED</color>
     <color name="edx_warning_accent">#FFC01F</color>
     <color name="edx_warning_back">#FFF9EB</color>
+    <color name="colorGreen">#3AB54A</color>
+    <color name="colorGray">#7F7F7F</color>
 
     <!-- Social platform colors -->
     <color name="fb_blue">#4267B2</color>
